--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
 # Default ignored files
-/description.html
-/encodings.xml
-/misc.xml
-/modules.xml
-/project-template.xml
-/vcs.xml
-/workspace.xml
-../01_FirstProjectOnGithub.iml
+/.idea
+/01_FirstProjectOnGithub.iml
